--- a/views/pages/examples/eg008CreateTemplate.ejs
+++ b/views/pages/examples/eg008CreateTemplate.ejs
@@ -11,9 +11,7 @@
 <p>This example first lists the user's templates and only creates a new template if one does not already exist in your account.
 </p>
 
-<% if (showDoc) { %>
-    <p><a target='_blank' href='<%= documentation %>'>Documentation</a> about this example.</p>
-<% } %>
+<% include ../../partials/docBody %>
   
 <p>API methods used:
     <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Templates/Templates/list">Templates::list</a>,
