--- a/views/pages/examples/eg005EnvelopeRecipients.ejs
+++ b/views/pages/examples/eg005EnvelopeRecipients.ejs
@@ -3,9 +3,7 @@
 <h4>5. List an envelope's recipients and their status</h4>
 <p>List the envelope's recipients, including their current status.</p>
 
-<% if (showDoc) { %>
-    <p><a target='_blank' href='<%= documentation %>'>Documentation</a> about this example.</p>
-<% } %>
+<% include ../../partials/docBody %>
   
   <p>API method used: 
    <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeRecipients/list">EnvelopeRecipients::list</a>.
