--- a/views/pages/examples/eg006EnvelopeDocs.ejs
+++ b/views/pages/examples/eg006EnvelopeDocs.ejs
@@ -8,9 +8,7 @@
 <p>This method is often used to dynamically create a list of an envelope's documents
     in preparation for enabling your user to download one or more of the documents.</p>
 
-<% if (showDoc) { %>
-    <p><a target='_blank' href='<%= documentation %>'>Documentation</a> about this example.</p>
-<% } %>
+  <% include ../../partials/docBody %>
   
 <p>API method used: 
    <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeDocuments/list">EnvelopeDocuments::list</a>.
