--- a/views/pages/examples/eg007EnvelopeGetDoc.ejs
+++ b/views/pages/examples/eg007EnvelopeGetDoc.ejs
@@ -12,9 +12,7 @@
   <li>The envelope's Certificate of Completion</li>
 </ul>
 
-<% if (showDoc) { %>
-  <p><a target='_blank' href='<%= documentation %>'>Documentation</a> about this example.</p>
-<% } %>
+<% include ../../partials/docBody %>
 
 <p>API method used: 
    <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeDocuments/get">EnvelopeDocuments::get</a>.
