--- a/views/pages/examples/eg009UseTemplate.ejs
+++ b/views/pages/examples/eg009UseTemplate.ejs
@@ -10,9 +10,7 @@
   avoiding the need to make software changes.
 </p>
 
-<% if (showDoc) { %>
-  <p><a target='_blank' href='<%= documentation %>'>Documentation</a> about this example.</p>
-<% } %>
+<% include ../../partials/docBody %>
 
 <p>API method used: 
    <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.
