--- a/views/pages/examples/eg010SendBinaryDocs.ejs
+++ b/views/pages/examples/eg010SendBinaryDocs.ejs
@@ -9,9 +9,7 @@
 <p>Since binary transfer is not yet supported by the SDK, this example uses the API directly and 
 demonstrates how to do so.</p>
 
-<% if (showDoc) { %>
-  <p><a target='_blank' href='<%= documentation %>'>Documentation</a> about this example.</p>
-<% } %>
+<% include ../../partials/docBody %>
 
 <p>API method used: 
   <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.
