--- a/views/pages/examples/eg015EnvelopeTabData.ejs
+++ b/views/pages/examples/eg015EnvelopeTabData.ejs
@@ -8,9 +8,7 @@
    still in progress.
 </p>
 
-<% if (showDoc) { %>
-    <p><a target='_blank' href='<%= documentation %>'>Documentation</a> about this example.</p>
-<% } %>
+<% include ../../partials/docBody %>
 
 <p>API method used:
     <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeFormData/get">EnvelopeFormData::get</a>.
