--- a/views/pages/examples/eg018EnvelopeCustomFieldData.ejs
+++ b/views/pages/examples/eg018EnvelopeCustomFieldData.ejs
@@ -10,9 +10,7 @@ envelope's certificate of completion.</p>
    an envelope.
 </p>
 
-<% if (showDoc) { %>
-<p><a target='_blank' href='<%= documentation %>'>Documentation</a> about this example.</p>
-<% } %>
+<% include ../../partials/docBody %>
 
 <p>API method used:
     <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeCustomFields/list">EnvelopeCustomFields::list</a>.
