--- a/views/pages/examples/eg020SmsAuthentication.ejs
+++ b/views/pages/examples/eg020SmsAuthentication.ejs
@@ -7,9 +7,7 @@
 </p>
 <p>This is an example of an envelope utilizing SMS authentication for multi-factor verification of a recipient.</p>
 
-  <% if (showDoc) { %>
-    <p><a target='_blank' href='<%= documentation %>'>Documentation</a> about this example.</p>
-  <% } %>
+<% include ../../partials/docBody %>
   
   <p>API method used: 
    <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.
