--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -37,7 +37,7 @@
             </li>
           <% } else { %>
             <li>
-              <a class="nav-link" href="/ds/login" id="login"
+              <a class="nav-link" href="/ds/mustAuthenticate" id="login"
                  data-busy="href">Login <span class="sr-only">(current)</span></a>
             </li>
           <% }  %>
@@ -76,4 +76,3 @@
 
       <p id="download-continue" class="feedback"><a href="/">Continue</a></p>
     </div> <!-- container -->
-  
