--- a/views/pages/ds_must_authenticate.ejs
+++ b/views/pages/ds_must_authenticate.ejs
@@ -3,7 +3,15 @@
 <div class="jumbotron">
   <h1 class="display-4">Please Authenticate with DocuSign</h1>
   <p class="lead">
-    <a class="btn btn-primary btn-lg" href="/ds/login" role="button" data-busy="href">Authenticate with DocuSign</a>
+  <form class="eg" action="/ds/login" method="get" data-busy="form">
+    <div class="form-group">
+      <select id="auth" name="auth" class="form-control">
+        <option value="grand-auth" selected>Authorization Code grant</option>
+        <option value="jwt-auth">JSON Web Token grant</option>
+      </select><br>
+      <button class="btn btn-primary btn-lg">Authenticate with DocuSign</button>
+    </div>
+  </form>
   </p>
   <hr class="my-4">
   <p>You need to authenticate with DocuSign to continue your request.</p>
