--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -6,10 +6,9 @@
     <h1 class="display-4">Welcome!</h1>
     <% if (locals.dsConfig.multiSourceChooser) { %>
       <p class="Xlead">Welcome to the DocuSign code examples with
-        OAuth Authorization Code Grant.</p>
+        OAuth Authorization Code Grant and JWT.</p>
     <% } else { %>
-      <p class="Xlead">Welcome to the DocuSign Node.JS examples with
-        OAuth Authorization Code Grant.</p>
+      <p class="Xlead">>Welcome to the DocuSign Python examples using multiple OAuth flows (JWT and Authorization Code Grant).</p>
     <% } %>
   </div>
 <% } %>
@@ -17,8 +16,7 @@
 
 <div id="index-page">
   <h2>Welcome</h2>
-  <p>This launcher both demonstrates use of the OAuth Authorization Code Grant flow and includes multiple workflow
-      examples for the DocuSign eSignature REST API.</p>
+  <p>This launcher includes the following examples for the DocuSign eSignature REST API.</p>
 
   <% if (locals.dsConfig.multiSourceChooser) { %>
     <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
