--- a/views/pages/index_examples.ejs
+++ b/views/pages/index_examples.ejs
@@ -1,5 +1,5 @@
  <% if (showDoc) { %>
-    <p><a target='_blank' href='<%= documentation %>'>Documentation</a> on using OAuth Authorization Code Grant from a Node Express application.</p>
+    <p><a target='_blank' href='<%= documentation %>'>Documentation</a> on using OAuth Authorization Code Grant and JWT from a Node Express application.</p>
   <% } %>
 
  <% if (locals.dsConfig.multiSourceChooser) { %>
