Fix Jumbotron reference to node and missed eg-03 links

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -8,7 +8,7 @@
       <p class="Xlead">Welcome to the DocuSign code examples with
         OAuth Authorization Code Grant and JWT.</p>
     <% } else { %>
-      <p class="Xlead">>Welcome to the DocuSign Python examples using multiple OAuth flows (JWT and Authorization Code Grant).</p>
+      <p class="Xlead">>Welcome to the DocuSign Node examples using multiple OAuth flows (JWT and Authorization Code Grant).</p>
     <% } %>
   </div>
 <% } %>
