--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -3,18 +3,38 @@
 <% if (! locals.user) { %>
   <!-- IF not signed in -->
   <div class="jumbotron">
-    <h1 class="display-4">Welcome!</h1>
+
+    <table>
+      <tbody>
+          <tr>
+              <td>
+
+                
+            
     <% if (locals.dsConfig.multiSourceChooser) { %>
+      <h1 class="display-4">Welcome</h1>
       <p class="Xlead">Welcome to the DocuSign code examples with
         OAuth Authorization Code Grant and JWT.</p>
     <% } else { %>
-      <p class="Xlead">Welcome to the DocuSign Node examples using multiple OAuth flows (JWT and Authorization Code Grant).</p>
+      <h1 class="display-4">Node Launcher</h1>
+      <p class="Xlead">
+        Welcome to the DocuSign Node examples using multiple OAuth flows (JWT and Authorization Code Grant).
+    </p>
     <% } %>
+
+  </td>
+  <td>
+      <img src="/images/banner-code.png" />
+  </td>
+</tr>
+</tbody>
+</table>
+
   </div>
 <% } %>
 
 
-<div id="index-page">
+<div class="container" style="margin-top: 40px" id="index-page">
   <h2>Welcome</h2>
   <p>This launcher includes the following examples for the DocuSign eSignature REST API.</p>
 
