--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -19,7 +19,7 @@
 
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-      <a class="navbar-brand" href="/">DocuSign Code Examples</a>
+      <a class="navbar-brand"  target="_blank" href="https://developers.docusign.com">DocuSign Developer</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
