--- a/views/pages/ds_must_authenticate.ejs
+++ b/views/pages/ds_must_authenticate.ejs
@@ -10,7 +10,7 @@
         <option value="grand-auth" selected>Authorization Code Grant</option>
         <option value="jwt-auth">JWT (JSON Web Token)</option>
       </select><br>
-      <button class="btn btn-primary btn-lg">Authenticate with DocuSign</button>
+      <button class="btn btn-docu btn-lg">Authenticate with DocuSign</button>
     </div>
   </form>
   </p>
