--- a/views/pages/examples/eg007EnvelopeGetDoc.ejs
+++ b/views/pages/examples/eg007EnvelopeGetDoc.ejs
@@ -25,7 +25,7 @@
     Thank you.</p>
     
  <form class="eg" action="eg002" method="get">
-     <button type="submit" class="btn btn-primary">Continue</button>
+     <button type="submit" class="btn btn-docu">Continue</button>
  </form>
 <% } else if (!documentsOk) { %>
   <p>Problem: please first create a list of the envelope's documents using 
@@ -33,7 +33,7 @@
     Thank you.</p>
     
  <form class="eg" action="eg006" method="get">
-     <button type="submit" class="btn btn-primary">Continue</button>
+     <button type="submit" class="btn btn-docu">Continue</button>
  </form>
 <% } else { %>
   <p>Please choose a document.<br/>
@@ -50,7 +50,7 @@
         </select>
     </div>  
     <input type="hidden" name="_csrf" value="<%- csrfToken %>">
-    <button type="submit" class="btn btn-primary">Continue</button>
+    <button type="submit" class="btn btn-docu">Continue</button>
   </form>
 <% } %>
 
