--- a/views/pages/examples/eg010SendBinaryDocs.ejs
+++ b/views/pages/examples/eg010SendBinaryDocs.ejs
@@ -41,7 +41,7 @@ demonstrates how to do so.</p>
              required>
     </div>
     <input type="hidden" name="_csrf" value="<%- csrfToken %>">
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn btn-docu">Submit</button>
   </form>
   
 <% include ../../partials/examplesFoot %>
