--- a/views/pages/examples/eg012EmbeddedConsole.ejs
+++ b/views/pages/examples/eg012EmbeddedConsole.ejs
@@ -32,7 +32,7 @@
         </select>
     </div>
     <input type="hidden" name="_csrf" value="<%- csrfToken %>">
-    <button type="submit" class="btn btn-primary">Continue</button>
+    <button type="submit" class="btn btn-docu">Continue</button>
 </form>
   
 <% include ../../partials/examplesFoot %>
