--- a/views/pages/examples/eg014CollectPayment.ejs
+++ b/views/pages/examples/eg014CollectPayment.ejs
@@ -46,7 +46,7 @@
               required>
       </div>
       <input type="hidden" name="_csrf" value="<%- csrfToken %>">
-      <button type="submit" class="btn btn-primary">Submit</button>
+      <button type="submit" class="btn btn-docu">Submit</button>
     </form>
 <% } else { %>
   <p>Problem: please set the <b>DS_PAYMENT_GATEWAY_ID</b> value in the configuration file.</p>
