--- a/views/pages/examples/eg017SetTemplateTabValues.ejs
+++ b/views/pages/examples/eg017SetTemplateTabValues.ejs
@@ -37,7 +37,7 @@ radio button and checkbox tabs.</p>
                    required>
         </div>
         <input type="hidden" name="_csrf" value="<%- csrfToken %>">
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-docu">Submit</button>
     </form>
 
     <% } else { %>
@@ -45,7 +45,7 @@ radio button and checkbox tabs.</p>
         Thank you.</p>
 
     <form class="eg" action="eg008" method="get">
-        <button type="submit" class="btn btn-primary">Continue</button>
+        <button type="submit" class="btn btn-docu">Continue</button>
     </form>
     <% } %>
 
