--- a/views/pages/examples/eg018EnvelopeCustomFieldData.ejs
+++ b/views/pages/examples/eg018EnvelopeCustomFieldData.ejs
@@ -23,7 +23,7 @@ envelope's certificate of completion.</p>
   
   <form class="eg" action="" method="post" data-busy="form">
     <input type="hidden" name="_csrf" value="<%- csrfToken %>">
-    <button type="submit" class="btn btn-primary">Continue</button>
+    <button type="submit" class="btn btn-docu">Continue</button>
   </form>
 
   <% } else { %>
@@ -31,7 +31,7 @@ envelope's certificate of completion.</p>
      Thank you.</p>
      
   <form class="eg" action="eg016" method="get">
-      <button type="submit" class="btn btn-primary">Continue</button>
+      <button type="submit" class="btn btn-docu">Continue</button>
   </form>
   <% } %>
 
