--- a/views/pages/examples/eg022KbaAuthentication.ejs
+++ b/views/pages/examples/eg022KbaAuthentication.ejs
@@ -37,7 +37,7 @@
                value="<%= locals.dsConfig.signerName %>" required>
       </div>
       <input type="hidden" name="_csrf" value="<%- csrfToken %>">
-      <button type="submit" class="btn btn-primary">Submit</button>
+      <button type="submit" class="btn btn-docu">Submit</button>
   </form>
 </form>
 <% include ../../partials/examplesFoot %>
