--- a/views/pages/examples/eg024CreatePermission.ejs
+++ b/views/pages/examples/eg024CreatePermission.ejs
@@ -20,7 +20,7 @@
         <input type="profileName" class="form-control" id="profileName" name="profileName">
     </div>
     <input type="hidden" name="_csrf" value="<%- csrfToken %>">
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn btn-docu">Submit</button>
 </form>
 
 <% include ../../partials/examplesFoot %>
