--- a/views/pages/examples/eg027DeletePermission.ejs
+++ b/views/pages/examples/eg027DeletePermission.ejs
@@ -21,7 +21,7 @@
 <p>Problem: please first create the profile using <a href="eg024">example 24.</a> <br/> Thank you.</p>
 
 <form class="eg" action="eg024" method="get">
-    <button type="submit" class="btn btn-primary">Continue</button>
+    <button type="submit" class="btn btn-docu">Continue</button>
 </form>
 <% } else { %>
 <form class="eg" action="" method="post" data-busy="form">
