--- a/views/pages/examples/eg029ApplyBrandToEnvelope.ejs
+++ b/views/pages/examples/eg029ApplyBrandToEnvelope.ejs
@@ -24,7 +24,7 @@
     Thank you.</p>
 
  <form class="eg" action="eg028" method="get">
-     <button type="submit" class="btn btn-primary">Continue</button>
+     <button type="submit" class="btn btn-docu">Continue</button>
  </form>
 <% } else { %>
 <form class="eg" action="" method="post" data-busy="form">
@@ -50,7 +50,7 @@
     </div>
 
     <input type="hidden" name="_csrf" value="<%- csrfToken %>">
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn btn-docu">Submit</button>
 </form>
 <% } %>
 
