--- a/views/pages/examples/eg002SigningViaEmail.ejs
+++ b/views/pages/examples/eg002SigningViaEmail.ejs
@@ -40,7 +40,7 @@
              required>
     </div>
     <input type="hidden" name="_csrf" value="<%- csrfToken %>">
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn btn-docu">Submit</button>
 </form>
   
 <% include ../../partials/examplesFoot %>
