--- a/views/pages/examples/eg005EnvelopeRecipients.ejs
+++ b/views/pages/examples/eg005EnvelopeRecipients.ejs
@@ -14,7 +14,7 @@
   
   <form class="eg" action="" method="post" data-busy="form">
       <input type="hidden" name="_csrf" value="<%- csrfToken %>">
-      <button type="submit" class="btn btn-primary">Continue</button>
+      <button type="submit" class="btn btn-docu">Continue</button>
   </form>
 
 <% } else { %>
@@ -22,7 +22,7 @@
      Thank you.</p>
      
   <form class="eg" action="eg002" method="get">
-      <button type="submit" class="btn btn-primary">Continue</button>
+      <button type="submit" class="btn btn-docu">Continue</button>
   </form>
 <% } %>
   
