--- a/views/pages/examples/eg008CreateTemplate.ejs
+++ b/views/pages/examples/eg008CreateTemplate.ejs
@@ -21,7 +21,7 @@
 <% include ../../partials/gitSource %>  
   <form class="eg" action="" method="post" data-busy="form">
       <input type="hidden" name="_csrf" value="<%- csrfToken %>">
-      <button type="submit" class="btn btn-primary">Continue</button>
+      <button type="submit" class="btn btn-docu">Continue</button>
   </form>
   
 <% include ../../partials/examplesFoot %>
