--- a/views/pages/examples/eg009UseTemplate.ejs
+++ b/views/pages/examples/eg009UseTemplate.ejs
@@ -44,7 +44,7 @@
                required>
       </div>
       <input type="hidden" name="_csrf" value="<%- csrfToken %>">
-      <button type="submit" class="btn btn-primary">Submit</button>
+      <button type="submit" class="btn btn-docu">Submit</button>
     </form>  
 
 <% } else { %>
@@ -52,7 +52,7 @@
      Thank you.</p>
      
   <form class="eg" action="eg008" method="get">
-      <button type="submit" class="btn btn-primary">Continue</button>
+      <button type="submit" class="btn btn-docu">Continue</button>
   </form>
 <% } %>
   
