--- a/views/pages/examples/eg011EmbeddedSending.ejs
+++ b/views/pages/examples/eg011EmbeddedSending.ejs
@@ -54,7 +54,7 @@
              required>
     </div>
     <input type="hidden" name="_csrf" value="<%- csrfToken %>">
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn btn-docu">Submit</button>
   </form>
   
 <% include ../../partials/examplesFoot %>
