--- a/views/pages/examples/eg013AddDocToTemplate.ejs
+++ b/views/pages/examples/eg013AddDocToTemplate.ejs
@@ -75,7 +75,7 @@
       </select>
     </div>    
     <input type="hidden" name="_csrf" value="<%- csrfToken %>">
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn btn-docu">Submit</button>
   </form>
   
 <% } else { %>
@@ -83,7 +83,7 @@
       Thank you.</p>
       
   <form class="eg" action="eg008" method="get">
-      <button type="submit" class="btn btn-primary">Continue</button>
+      <button type="submit" class="btn btn-docu">Continue</button>
   </form>
 <% } %>
     
