--- a/views/pages/examples/eg015EnvelopeTabData.ejs
+++ b/views/pages/examples/eg015EnvelopeTabData.ejs
@@ -21,7 +21,7 @@
   
   <form class="eg" action="" method="post" data-busy="form">
     <input type="hidden" name="_csrf" value="<%- csrfToken %>">
-    <button type="submit" class="btn btn-primary">Continue</button>
+    <button type="submit" class="btn btn-docu">Continue</button>
   </form>
 
   <% } else { %>
@@ -29,7 +29,7 @@
      Thank you.</p>
      
   <form class="eg" action="eg009" method="get">
-      <button type="submit" class="btn btn-primary">Continue</button>
+      <button type="submit" class="btn btn-docu">Continue</button>
   </form>
   <% } %>
 
