--- a/views/pages/examples/eg021PhoneAuthentication.ejs
+++ b/views/pages/examples/eg021PhoneAuthentication.ejs
@@ -34,7 +34,7 @@
              value="<%= locals.dsConfig.signerName %>" required>
     </div>
     <input type="hidden" name="_csrf" value="<%- csrfToken %>">
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn btn-docu">Submit</button>
 </form>
 
 <% include ../../partials/examplesFoot %>
