--- a/views/pages/examples/eg026PermissionChangeSingleSetting.ejs
+++ b/views/pages/examples/eg026PermissionChangeSingleSetting.ejs
@@ -97,7 +97,7 @@
 
 
   <input type="hidden" name="_csrf" value="<%- csrfToken %>">
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <button type="submit" class="btn btn-docu">Submit</button>
 
 </form>
 
