--- a/views/pages/examples/eg028CreateBrand.ejs
+++ b/views/pages/examples/eg028CreateBrand.ejs
@@ -33,7 +33,7 @@
     </select>
 </div>
   <input type="hidden" name="_csrf" value="<%- csrfToken %>">
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <button type="submit" class="btn btn-docu">Submit</button>
 </form>
 
 <% include ../../partials/examplesFoot %>
