--- a/views/pages/examples/eg031BulkSendEnvelopes.ejs
+++ b/views/pages/examples/eg031BulkSendEnvelopes.ejs
@@ -72,7 +72,7 @@
     </div>
 
     <input type="hidden" name="_csrf" value="<%- csrfToken %>">
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn btn-docu">Submit</button>
 </form>
 
 
