--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,8 +1,8 @@
 <% include ../partials/genericHead %>
-
 <% if (! locals.user) { %>
   <!-- IF not signed in -->
-  <div class="jumbotron">
+<div>
+  <div class="jumbotron jumbotron-fluid">
 
     <table>
       <tbody>
@@ -31,6 +31,7 @@
 </table>
 
   </div>
+</div>
 <% } %>
 
 
@@ -60,6 +61,7 @@
   <% } else { %>
     <% include index_examples %>
   <% } %>
+</section>
 </div>
 
     <!-- anchor-js is only for the index page -->
