--- a/views/partials/genericHead.ejs
+++ b/views/partials/genericHead.ejs
@@ -1,3 +1,3 @@
 <% include head %>
-<div class="container">
-    <section id="content">
+<div class="container-full-bg">
+    <section id="content" style="margin-top:-60px!important; padding-top:30px!important;">
