margin on the must_authenticate

--- a/views/pages/ds_must_authenticate.ejs
+++ b/views/pages/ds_must_authenticate.ejs
@@ -1,6 +1,5 @@
 <% include ../partials/genericHead %>
-
-<div class="jumbotron">
+<div style="margin:1% 5%;">
   <h1 class="display-4">Please Authenticate with DocuSign</h1>
   <p class="lead">
   <form class="eg" action="/ds/login" method="get" data-busy="form">
@@ -16,6 +15,6 @@
   </p>
   <hr class="my-4">
   <p>You need to authenticate with DocuSign to continue your request.</p>
-</div>
 
+</div>
 <% include ../partials/genericFoot %>
