--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -55,7 +55,7 @@
     <div class="container">
       <!-- The closing div is in foot.ejs -->
       <% if (locals.session.accountName) { %>
-        <p>
+        <p style="float: right;">
           DocuSign Account: <%= locals.session.accountName %>.
         </p>
       <% } %>
