--- a/views/pages/examples/eg020SmsAuthentication.ejs
+++ b/views/pages/examples/eg020SmsAuthentication.ejs
@@ -13,9 +13,14 @@
    <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.
 </p>
 
-<p>The phone-number to utilize the example provided is: <strong>415-555-1212</strong></p>
+
 <% include ../../partials/gitSource %>
 <form class="eg" action="" method="post" data-busy="form">
+  <div class="form-group">
+    <label for="phoneNumber">SMS Number</label>
+    <input type="text" class="form-control" id="phoneNumber" placeholder="415-555-1212" name="phoneNumber"
+           value="415-555-1212" required>
+  </div>
     <div class="form-group">
       <label for="signerEmail">Signer Email</label>
       <input type="email" class="form-control" id="signerEmail" name="signerEmail"
