remove 'ceremony' from all references to embedded signing (#10)
* remove 'ceremony' from all references to embedded signing

* remove 'ceremony' from all references to embedded signing

--- a/views/pages/examples/eg001EmbeddedSigning.ejs
+++ b/views/pages/examples/eg001EmbeddedSigning.ejs
@@ -1,7 +1,7 @@
 <% include ../../partials/examplesHead %>
-<h4>1. Embedded Signing Ceremony</h4>
-<p>This example sends an envelope, and then uses an embedded signing ceremony for the first signer.</p>
-<p>Embedded signing provides a smoother user experience for the signer: the DocuSign signing ceremony is initiated from your website.</p>
+<h4>1. Use embedded signing</h4>
+<p>This example sends an envelope, and then uses embedded signing for the first signer.</p>
+<p>Embedded signing provides a smoother user experience for the signer: the DocuSign signing is initiated from your website.</p>
 
 <% include ../../partials/docBody %>
 
