--- a/views/pages/index_examples.ejs
+++ b/views/pages/index_examples.ejs
@@ -9,9 +9,9 @@
  <h3 class="mt-4">Code Examples</h3>
  <% } %>
 
- <h4 id="example001">1. <a href="eg001">Embedded Signing Ceremony</a></h4>
-  <p>This example sends an envelope, and then uses an embedded signing ceremony for the first signer.
-    With embedded signing, the DocuSign signing ceremony is initiated from your website.
+ <h4 id="example001">1. <a href="eg001">Use embedded Signing</a></h4>
+  <p>This example sends an envelope, and then uses embedded signing for the first signer.
+    With embedded signing, the DocuSign signing is initiated from your website.
   </p>
   <p>API methods used:
      <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a> and
@@ -89,7 +89,7 @@
     <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.
   </p>
 
-  <h4 id="example011">11. <a href="eg011">Embedded sending</a></h4>
+  <h4 id="example011">11. <a href="eg011">Use embedded sending</a></h4>
   <p>An envelope will be created in draft mode. The DocuSign
     web tool (NDSE) will then be shown, enabling further updates
     to the envelope before it is sent.
@@ -104,7 +104,7 @@
     <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeViews/createConsole">EnvelopeViews::createConsole</a>.
   </p>
 
-  <h4 id="example013">13. <a href="eg013">Embedded Signing Ceremony from a template with an added document</a></h4>
+  <h4 id="example013">13. <a href="eg013">Use embedded signing from a template with an added document</a></h4>
   <p>This example sends an envelope based on a template.</p>
   <p>In addition to the template's document(s), the example adds an
      additional document to the envelope by using the
