--- a/views/pages/examples/eg013AddDocToTemplate.ejs
+++ b/views/pages/examples/eg013AddDocToTemplate.ejs
@@ -1,6 +1,6 @@
 <% include ../../partials/examplesHead %>
 
-<h4>13. Embedded Signing Ceremony from a template with an added document</h4>
+<h4>13. Use Embedded Signing from a template with an added document</h4>
 
 <% if (templateOk) { %>
   <p>This example sends an envelope based on a template.</p>
@@ -13,7 +13,7 @@
   <p>This example then enables you to sign the envelope using embedded signing.</p>
   <p>Embedded signing provides a smoother user experience for a signer who is
     already logged into your web application since the DocuSign 
-    signing ceremony is initiated from your website.</p>
+    signing is initiated from your website.</p>
 <% } %>
 
 <% include ../../partials/docBody %>
