--- a/views/pages/index_examples.ejs
+++ b/views/pages/index_examples.ejs
@@ -9,9 +9,9 @@
  <h3 class="mt-4">Code Examples</h3>
  <% } %>
 
- <h4 id="example001">1. <a href="eg001">Use embedded Signing</a></h4>
-  <p>This example sends an envelope, and then uses embedded signing for the first signer.
-    With embedded signing, the DocuSign signing is initiated from your website.
+ <h4 id="example001">1. <a href="eg001">Use embedded signing</a></h4>
+  <p>This example sends an envelope, then uses embedded signing for the first signer.
+    With embedded signing, DocuSign signing is initiated from your website.
   </p>
   <p>API methods used:
      <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a> and
