(WIP) Node.js eSignature advanced recipient routing examples (#12)
* Add pause a signature workflow example

* Add unpause a signature workflow example

* Add use conditional recipients

* Refactoring

* fix issues with ARR examples

* add error message for eg034

Co-authored-by: Karissa.Jacobsen <Karissa.Jacobsen@docusign.com>

--- a/views/pages/index_examples.ejs
+++ b/views/pages/index_examples.ejs
@@ -235,6 +235,33 @@
       <a target="_blank" href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeRecipients/create">EnvelopeRecipients::create</a>.
   </p>
 
+ <h4 id="example032">32. <a href="eg032">Pausing a signature workflow</a></h4>
+ <p>
+     This example creates and envelope and then pauses the signature workflow
+ </p>
+ <p>
+     API methods used:
+     <a target="_blank" href="https://developers.docusign.com/esign-rest-api/reference/envelopes/envelopes/create">Envelopes::create</a>
+ </p>
+
+ <h4 id="example033">33. <a href="eg033">Unpausing a signature workflow</a></h4>
+ <p>
+     This example unpauses a signature workflow for the previously created envelope that was paused.
+ </p>
+ <p>
+     API methods used:
+     <a target="_blank" href="https://developers.docusign.com/esign-rest-api/reference/envelopes/envelopes/update">Envelopes::update</a>
+ </p>
+
+ <h4 id="example034">34. <a href="eg034">Using conditional recipients</a></h4>
+ <p>
+     This example creates an envelope that is routed to different recipients based on a predefined condition.
+ </p>
+ <p>
+     API methods used:
+     <a target="_blank" href="https://developers.docusign.com/esign-rest-api/reference/envelopes/envelopes/create">Envelopes::create</a>
+ </p>
+
 <% } %>
 
 <% if(locals.dsConfig.examplesApi === 'rooms') { %>
