node.js sms delivery

--- a/views/pages/index_esignature_examples.ejs
+++ b/views/pages/index_esignature_examples.ejs
@@ -292,3 +292,12 @@
     API methods used:
     <a target="_blank" href="https://developers.docusign.com/esign-rest-api/reference/envelopes/envelopes/create">Envelopes::create</a>
 </p>
+<h2>Premium Features</h2>
+<h4 id="example034">35. <a href="eg035">Sending via SMS delivery</a></h4>
+<p>
+    This example demonstrates how to send a signature request for a signer (and CC) to read and sign via an SMS message.
+</p>
+<p>
+    API methods used:
+    <a target="_blank" href="https://developers.docusign.com/esign-rest-api/reference/envelopes/envelopes/create">Envelopes::create</a>
+</p>
